All_Component_DX/force-app/main/default/objects/SM_Change_Order_Configuration__c/SM_Change_Order_Configuration__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object is used to store Field Change Order Configuration Templates that are defined in SVMX Setup.</description>
    <label>Change Order Configuration</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Order Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>