All_Component_DX/force-app/main/default/objects/SM_Change_Order_Configuration__c/fields/SM_Active__c.field-meta.xml
<CustomField>
    <fullName>SM_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is used to identify whether the Change Order Configuration is active or not.</description>
    <inlineHelpText>This field is used to identify whether the Change Order Configuration is active or not.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>