All_Component_DX/force-app/main/default/objects/SM_Change_Order_Configuration__c/fields/SM_Description__c.field-meta.xml
<CustomField>
    <fullName>SM_Description__c</fullName>
    <description>This field is used to store the description of Change Order Configuration.</description>
    <inlineHelpText>This field is used to store the description of Change Order Configuration.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>