All_Component_DX/force-app/main/default/objects/SM_Change_Order_Configuration__c/fields/SM_Email__c.field-meta.xml
<CustomField>
    <fullName>SM_Email__c</fullName>
    <description>This field is used to store email address to send notification on completion of the Batch job.</description>
    <inlineHelpText>This field is used to store email address to send notification on completion of the Batch job.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>