All_Component_DX/force-app/main/default/objects/SM_Change_Order_Configuration__c/fields/SM_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Name__c</fullName>
    <description>This field is used to store the Change Order Configuration Name.</description>
    <inlineHelpText>This field is used to store the Change Order Configuration Name.</inlineHelpText>
    <label>Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>