All_Component_DX/force-app/main/default/objects/SM_Change_Order_Configuration__c/fields/SM_Process1__c.field-meta.xml
<CustomField>
    <fullName>SM_Process1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate Installed Product to Work Order Mapping.</description>
    <inlineHelpText>This field is used to associate Installed Product to Work Order Mapping.</inlineHelpText>
    <label>Process1</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>Change Order Configurations</relationshipLabel>
    <relationshipName>Change_Order_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>