All_Component_DX/force-app/main/default/objects/SM_Change_Order_Configuration__c/fields/SM_Process2__c.field-meta.xml
<CustomField>
    <fullName>SM_Process2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate Change Order to Work Order Mapping.</description>
    <inlineHelpText>This field is used to associate Change Order to Work Order Mapping.</inlineHelpText>
    <label>Process2</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>Change Order Configurations (Process2)</relationshipLabel>
    <relationshipName>Change_Order_Configurations1</relationshipName>
    <type>Lookup</type>
</CustomField>